log
Thu 25 Apr 2024 04:00:52 AM UTC: 
 hashmap.c | 118 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 116 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
9ed0b0b
Thu 25 Apr 2024 04:01:14 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  13|2
total_score: 50/70
52889b9
Thu 25 Apr 2024 04:02:29 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccuVAINk.o: in function `first_test':
test.c:(.text+0x1101): undefined reference to `firstMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x1151): undefined reference to `firstMap'
collect2: error: ld returned 1 exit status
Compilation failed
70d76e4
Thu 25 Apr 2024 04:02:58 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c:179:8: error: redefinition of ‘nextMap’
  179 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
hashmap.c:146:8: note: previous definition of ‘nextMap’ with type ‘Pair *(HashMap *)’ {aka ‘Pair *(struct HashMap *)’}
  146 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
Compilation failed
c387972
Thu 25 Apr 2024 04:03:26 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
1f4feb2
Thu 25 Apr 2024 04:03:40 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
4643df3
Thu 25 Apr 2024 09:08:27 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
0b50fff
Thu 25 Apr 2024 09:09:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
9b1d438
Thu 25 Apr 2024 09:11:25 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
e634ebd
Thu 25 Apr 2024 09:15:15 PM UTC: 
 hashmap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  13|2
total_score: 50/70
ae6ec53
Thu 25 Apr 2024 09:16:05 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
db2d7cd
Thu 25 Apr 2024 09:18:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:141:16: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  141 |   map->current = NULL;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
f2ff092
Thu 25 Apr 2024 09:18:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
a935620
Thu 25 Apr 2024 09:20:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
1b84c46
Thu 25 Apr 2024 09:26:56 PM UTC: 
 hashmap.c | 21 +++++----------------
 1 file changed, 5 insertions(+), 16 deletions(-)
 tests:  16|1
total_score: 60/70
05e8a8e
Sun 28 Apr 2024 01:37:43 AM UTC: 
 hashmap.c | 29 ++++++++++-------------------
 1 file changed, 10 insertions(+), 19 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:75:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   75 |   map->buckets = (Pair *)calloc(map->capacity, sizeof(Pair*));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
6a45620
